Нормальна логіка розподілу по категоріям, нове можальне вікно і все працює

--- a/src/Components/Deserts/Deserts.sass
+++ b/src/Components/Deserts/Deserts.sass
@@ -1,60 +1,17 @@
-.productContainer, .productName, .bottomContainer, .mainImage, .description, .deleteButton
-  border: 1px solid red
-.Deserts
-  background-color: #f5eee0
-
-.mainPhoto
-  width: 100%
-  height: auto
-
-
-.productContainer
-  display: flex
-  flex-direction: column
-  max-width: 100%
-  margin: 0 100px
-  //background: grey
-.noneProductContainer
-  display: none
-
-.productName
-  width: 300px
-  height: 50px
-  font-size: 20px
-  text-align: center
-  margin: 0 auto
-  h3
-    color: #42a7ff
-
-
-.bottomContainer
-  display: flex
-  flex-direction: row
-  //border: 1px solid black
-
-  margin: 30px
-.mainImage
-  width: 30%
-  padding: 10px
-  img
-    width: 90%
-    height: auto
-
-.description
-  width: 70%
-  padding: 20px
-  display: flex
-  flex-direction: column
-  p
-    font-size: 20px
-
-.deleteButton
-  cursor: pointer
+//.productContainer, .productName, .bottomContainer, .mainImage, .description, .deleteButton
+//  border: 1px solid red
+//.Deserts
+//  background-color: white
+//
 
 .nullAlert
-  width: 400px
-  height: 150px
+  display: flex
+  justify-content: center
+  align-items: center
+  border-radius: 10px
+  width: 500px
+  height: 200px
   background-color: grey
-  color: white
-  margin: 200px auto
-  font-size: 40px
+  .nullAlertText
+    color: white
+    font-size: 25px
