--- a/src/Components/Header/Header.sass
+++ b/src/Components/Header/Header.sass
@@ -1,19 +1,29 @@
 @import "../../App"
 
-.Header
-  max-width: 100%
 .mainLinks
   display: flex
+  width: calc(100% - 60px)
+  padding: 0 30px
+  top: 0
+  height: 60px
   justify-content: space-evenly
-  max-width: calc(100% - 30px)
-  padding: 0 67px
-  height: 70px
-  align-items: center
-  background: #b07fd8
-.ActiveNavLink
-  color: #ffffff
-a
-  font-size: 30px
-  text-decoration: none
-a:active
-  color: #ffffff
+  background: rgba(14, 14, 14, 0.59)
+  position: fixed
+  z-index: 5
+  border-bottom: 1px solid rgba(115, 115, 115, 0.26)
+  .headerLink
+    display: flex
+    align-items: center
+    text-decoration: none
+    //border: 1px solid red
+    padding: 5px 45px
+    transition: .4s
+    p
+      font-family: Roboto, sans-serif
+      font-size: 20px
+      color: #e6e6e6
+      transition: .2s
+    &:hover
+      background: rgba(0, 0, 0, 0.37)
+  .active
+    background: rgba(0, 0, 0, 0.37)
